Apply review suggestion

--- a/x-pack/docs/en/security/authorization/privileges.asciidoc
+++ b/x-pack/docs/en/security/authorization/privileges.asciidoc
@@ -135,9 +135,10 @@ All operations related to managing autoscaling policies.
 
 `manage_data_frame_transforms`::
 All operations related to managing {transforms}.
+deprecated[7.5] Use `manage_transform` instead.
 
 `manage_enrich`::
-Enable you to manage transforms (Need to be reviewed).
+All operations related to managing and executing enrich policies.
 
 `manage_watcher`::
 All watcher operations, such as putting watches, executing, activate or acknowledging.
