Ensure breaking-changes tag exists for both cases
This was previously added so that it only worked when there were no
breaking changes, but should be for the case of breaking changes also

--- a/build-tools-internal/src/main/resources/templates/breaking-changes.asciidoc
+++ b/build-tools-internal/src/main/resources/templates/breaking-changes.asciidoc
@@ -15,10 +15,10 @@ coming::[${majorDotMinorDotRevision}]
 [discrete]
 [[breaking-changes-${majorDotMinor}]]
 === Breaking changes
-<% if (breakingByNotabilityByArea.isEmpty()) { %>
+
 // tag::notable-breaking-changes[]
+<% if (breakingByNotabilityByArea.isEmpty()) { %>
 There are no breaking changes in {es} ${majorDotMinor}.
-// end::notable-breaking-changes[]
 <% } else { %>
 The following changes in {es} ${majorDotMinor} might affect your applications
 and prevent them from operating normally.
@@ -61,10 +61,10 @@ ${breaking.impact.trim()}
             }
         }
     }
-}
+} %>
+// end::notable-breaking-changes[]
 
-if (deprecationsByNotabilityByArea.isEmpty() == false) { %>
-
+<% if (deprecationsByNotabilityByArea.isEmpty() == false) { %>
 [discrete]
 [[deprecated-${majorDotMinor}]]
 === Deprecations
