--- a/docs/reference/mapping/types/flattened.asciidoc
+++ b/docs/reference/mapping/types/flattened.asciidoc
@@ -338,7 +338,7 @@ PUT idx
 PUT idx/_doc/1
 {
   "keywords": {
-    "apple", "apple", "banana", "avocado", "10", "200", "AVOCADO", "Banana", "Tangerine"
+    "field": [ "apple", "apple", "banana", "avocado", "10", "200", "AVOCADO", "Banana", "Tangerine" ]
   }
 }
 ----
@@ -348,7 +348,9 @@ Will become:
 [source,console-result]
 ----
 {
-  "keywords": ["10", "200", "AVOCADO", "Banana", "Tangerine", "apple", "avocado", "banana"]
+  "keywords": {
+    "field": [ "10", "200", "AVOCADO", "Banana", "Tangerine", "apple", "avocado", "banana" ]
+  }
 }
 ----
 // TEST[s/^/{"_source":/ s/\n$/}/]
@@ -368,20 +370,13 @@ PUT idx
 }
 PUT idx/_doc/1
 {
-  "keywords": [
-    {
-        "id": 1,
-        "name": "foo",
-    }
-    {
-        "id": 2,
-        "name": "bar"
-    },
-    {
-        "id": 3,
-        "name": "baz"
-    }
-  ]
+  "keywords": {
+      "field": [
+        { "id": 1, "name": "foo" },
+        { "id": 2, "name": "bar" },
+        { "id": 3, "name": "baz" }
+      ]
+  }
 }
 ----
 // TEST[s/$/\nGET idx\/_doc\/1?filter_path=_source\n/]
@@ -390,20 +385,12 @@ Will become (note the nested objects instead of the "keywords" array):
 [source,console-result]
 ----
 {
-  "keywords": {
-    {
-        "id": 1,
-        "name": "foo",
+    "keywords": {
+      "field": {
+          "id": [ "1", "2", "3" ],
+          "name": [ "foo", "bar", "baz" ]
+      }
     }
-    {
-        "id": 2,
-        "name": "bar"
-    },
-    {
-        "id": 3,
-        "name": "baz"
-    }
-  }
 }
 ----
 // TEST[s/^/{"_source":/ s/\n$/}/]
@@ -423,7 +410,9 @@ PUT idx
 }
 PUT idx/_doc/1
 {
-  "keywords": [ "foo" ]
+  "keywords": {
+    "field": [ "foo" ]
+  }
 }
 ----
 // TEST[s/$/\nGET idx\/_doc\/1?filter_path=_source\n/]
@@ -432,7 +421,9 @@ Will become (note the nested objects instead of the "keywords" array):
 [source,console-result]
 ----
 {
-  "keywords": "foo"
+  "keywords": {
+    "field": "foo"
+  }
 }
 ----
 // TEST[s/^/{"_source":/ s/\n$/}/]
