Add beta label to search application docs

--- a/docs/reference/search-application/apis/delete-search-application.asciidoc
+++ b/docs/reference/search-application/apis/delete-search-application.asciidoc
@@ -2,6 +2,8 @@
 [[delete-search-application]]
 === Delete Search Application
 
+beta::[]
+
 ++++
 <titleabbrev>Delete Search Application</titleabbrev>
 ++++
