--- a/docs/reference/search-application/apis/list-search-applications.asciidoc
+++ b/docs/reference/search-application/apis/list-search-applications.asciidoc
@@ -2,6 +2,8 @@
 [[list-search-applications]]
 === List Search Applications
 
+beta::[]
+
 ++++
 <titleabbrev>List Search Applications</titleabbrev>
 ++++
