Add Beta label to search application docs (#94997)
* Add beta label to search application docs

* Fix capitalization

--- a/docs/reference/search-application/apis/list-search-applications.asciidoc
+++ b/docs/reference/search-application/apis/list-search-applications.asciidoc
@@ -2,6 +2,8 @@
 [[list-search-applications]]
 === List Search Applications
 
+beta::[]
+
 ++++
 <titleabbrev>List Search Applications</titleabbrev>
 ++++
@@ -44,7 +46,7 @@ GET _application/search_application/
 ----
 // TEST[skip:TBD]
 
-The following example lists the first three Search Applications whose names match the query String `app`:
+The following example lists the first three Search Applications whose names match the query string `app`:
 
 [source,console]
 ----
