[DOCS] Adds subpage to main page.

--- a/docs/reference/search/search-your-data/semantic-search-elser.asciidoc
+++ b/docs/reference/search/search-your-data/semantic-search-elser.asciidoc
@@ -4,4 +4,7 @@
 <titleabbrev>Semantic search with ELSER</titleabbrev>
 ++++
 
+:keywords: {ml-init}, {stack}, {nlp}, ELSER
+:description: ELSER is a learned sparse ranking model trained by Elastic.
+
 [TBD]
