--- a/docs/reference/release-notes.asciidoc
+++ b/docs/reference/release-notes.asciidoc
@@ -6,6 +6,7 @@
 
 This section summarizes the changes in each release.
 
+* <<release-notes-8.7.1>>
 * <<release-notes-8.7.0>>
 * <<release-notes-8.6.2>>
 * <<release-notes-8.6.1>>
@@ -40,6 +41,7 @@ This section summarizes the changes in each release.
 
 --
 
+include::release-notes/8.7.1.asciidoc[]
 include::release-notes/8.7.0.asciidoc[]
 include::release-notes/8.6.2.asciidoc[]
 include::release-notes/8.6.1.asciidoc[]
