--- a/docs/reference/troubleshooting.asciidoc
+++ b/docs/reference/troubleshooting.asciidoc
@@ -54,6 +54,7 @@ fix problems that an {es} deployment might encounter.
 * <<transform-troubleshooting,Troubleshooting transforms>>
 * <<watcher-troubleshooting,Troubleshooting Watcher>>
 * <<troubleshooting-searches,Troubleshooting searches>>
+* <<troubleshoot-shards-capacity-issues, Troubleshoot shards capacity issue>>
 
 If none of these solutions relate to your issue, you can still get help:
 
