--- a/docs/reference/ml/trained-models/apis/get-trained-models.asciidoc
+++ b/docs/reference/ml/trained-models/apis/get-trained-models.asciidoc
@@ -76,6 +76,8 @@ options are:
     it was specified by the user or tuned during hyperparameter optimization.
  - `total_feature_importance`: Includes the total {feat-imp} for the training
    data set.
+ - `download_status`: Includes the field `is_fully_downloaded` indicating if the
+full model definition is present.
 The baseline and total {feat-imp} values are returned in the `metadata` field
 in the response body.
 
@@ -928,6 +930,11 @@ The input field names for the model definition.
 (string)
 An array of input field names for the model.
 =====
+
+`is_fully_downloaded`::
+(boolean)
+True if the full model definition is present.
+This field is only present if include download status
 
 // Begin location
 `location`::
