--- a/docs/reference/ccr/uni-directional-disaster-recovery.asciidoc
+++ b/docs/reference/ccr/uni-directional-disaster-recovery.asciidoc
@@ -56,9 +56,9 @@ PUT _cluster/settings
         "clusterA": {
           "mode": "proxy",
           "skip_unavailable": "true",
-          "server_name": "clustera.es.australia-southeast1.gcp.elastic-cloud.com",
+          "server_name": "clustera.es.region-a.gcp.elastic-cloud.com",
           "proxy_socket_connections": "18",
-          "proxy_address": "clustera.es.australia-southeast1.gcp.elastic-cloud.com:9400"
+          "proxy_address": "clustera.es.region-a.gcp.elastic-cloud.com:9400"
         }
       }
     }
@@ -66,15 +66,15 @@ PUT _cluster/settings
 }
 ----
 // TEST[setup:host]
-// TEST[s/"server_name": "clustera.es.australia-southeast1.gcp.elastic-cloud.com",//]
+// TEST[s/"server_name": "clustera.es.region-a.gcp.elastic-cloud.com",//]
 // TEST[s/"proxy_socket_connections": 18,//]
-// TEST[s/clustera.es.australia-southeast1.gcp.elastic-cloud.com:9400/\${transport_host}/]
+// TEST[s/clustera.es.region-a.gcp.elastic-cloud.com:9400/\${transport_host}/]
 // TEST[s/clusterA/remote_cluster/]
 
 [source,console]
 ----
 ### On clusterB ###
-PUT /kibana_sample_data_ecommerce_copy/_ccr/follow?wait_for_active_shards=1
+PUT /kibana_sample_data_ecommerce/_ccr/follow?wait_for_active_shards=1
 {
   "remote_cluster": "clusterA",
   "leader_index": "kibana_sample_data_ecommerce"
@@ -100,10 +100,10 @@ that they accept writes. This can be achieved by:
 [source,console]
 ----
 ### On clusterB ###
-POST /kibana_sample_data_ecommerce_copy/_ccr/pause_follow
-POST /kibana_sample_data_ecommerce_copy/_close           
-POST /kibana_sample_data_ecommerce_copy/_ccr/unfollow    
-POST /kibana_sample_data_ecommerce_copy/_open
+POST /kibana_sample_data_ecommerce/_ccr/pause_follow
+POST /kibana_sample_data_ecommerce/_close           
+POST /kibana_sample_data_ecommerce/_ccr/unfollow    
+POST /kibana_sample_data_ecommerce/_open
 ----
 // TEST[continued]
 
@@ -116,7 +116,7 @@ notice this index is now writable.
 [source,console]
 ----
 ### On clusterB ###
-POST kibana_sample_data_ecommerce_copy/_doc/
+POST kibana_sample_data_ecommerce/_doc/
 {
   "user": "kimchy"
 }
@@ -140,9 +140,9 @@ PUT _cluster/settings
         "clusterB": {
           "mode": "proxy",
           "skip_unavailable": "true",
-          "server_name": "clusterb.es.australia-southeast1.gcp.elastic-cloud.com",
+          "server_name": "clusterb.es.region-b.gcp.elastic-cloud.com",
           "proxy_socket_connections": "18",
-          "proxy_address": "clusterb.es.australia-southeast1.gcp.elastic-cloud.com:9400"
+          "proxy_address": "clusterb.es.region-b.gcp.elastic-cloud.com:9400"
         }
       }
     }
@@ -150,9 +150,9 @@ PUT _cluster/settings
 }
 ----
 // TEST[setup:host]
-// TEST[s/"server_name": "clusterb.es.australia-southeast1.gcp.elastic-cloud.com",//]
+// TEST[s/"server_name": "clusterb.es.region-b.gcp.elastic-cloud.com",//]
 // TEST[s/"proxy_socket_connections": 18,//]
-// TEST[s/clusterb.es.australia-southeast1.gcp.elastic-cloud.com:9400/\${transport_host}/]
+// TEST[s/clusterb.es.region-b.gcp.elastic-cloud.com:9400/\${transport_host}/]
 // TEST[s/clusterB/remote_cluster/]
 
 . Existing data needs to be discarded before you can turn any index into a
@@ -176,7 +176,7 @@ DELETE kibana_sample_data_ecommerce
 PUT /kibana_sample_data_ecommerce/_ccr/follow?wait_for_active_shards=1
 { 
   "remote_cluster": "clusterB", 
-  "leader_index": "kibana_sample_data_ecommerce_copy" 
+  "leader_index": "kibana_sample_data_ecommerce" 
 }
 ----
 // TEST[continued]
@@ -190,3 +190,4 @@ PUT /kibana_sample_data_ecommerce/_ccr/follow?wait_for_active_shards=1
 GET kibana_sample_data_ecommerce/_search?q=kimchy
 ----
 // TEST[continued]
++ TIP: If a soft delete is merged away before it can be replicated to a follower the following process will fail due to incomplete history on the leader, see <<ccr-index-soft-deletes-retention-period, index.soft_deletes.retention_lease.period>> for more details.
