[8.19] Fix name of started time field in shutdown status (#139910) (#140287)
* Fix name of started time field in shutdown status (#139910)

This commit adjusts the field name indicated the time a shutdown started
to be consistent with other millis based times, using the `_millis`
suffix with an underscore. Note that this API is private so making
rest changes without bwc is ok.

closes #139543

* fix docs

---------

Co-authored-by: Yang Wang <yang.wang@elastic.co>
Co-authored-by: Moritz Mack <mmack@apache.org>

--- a/docs/reference/shutdown/apis/shutdown-get.asciidoc
+++ b/docs/reference/shutdown/apis/shutdown-get.asciidoc
@@ -81,7 +81,7 @@ including the status of shard migration, task migration, and plugin cleanup:
             "node_ephemeral_id": null,
             "type": "RESTART",
             "reason": "Demonstrating how the node shutdown API works",
-            "shutdown_startedmillis": 1624406108685,
+            "shutdown_started_millis": 1624406108685,
             "allocation_delay": "10m",
             "status": "COMPLETE",
             "shard_migration": {
@@ -99,5 +99,5 @@ including the status of shard migration, task migration, and plugin cleanup:
     ]
 }
 --------------------------------------------------
-// TESTRESPONSE[s/1624406108685/$body.nodes.0.shutdown_startedmillis/]
+// TESTRESPONSE[s/1624406108685/$body.nodes.0.shutdown_started_millis/]
 // TESTRESPONSE[s/USpTGYaBSIKbgSUJR2Z9lg/$body.nodes.0.node_id/]
