--- a/docs/reference/mapping/params/subobjects.asciidoc
+++ b/docs/reference/mapping/params/subobjects.asciidoc
@@ -114,6 +114,11 @@ The `subobjects` setting for existing fields and the top-level mapping definitio
 [[subobjects-auto-flattening]]
 ==== Auto-flattening object mappings
 
+[WARNING]
+====
+Object fields of type `nested` don't work when wrapped by an object field that is configured with `subobjects: false`.
+====
+
 It is generally recommended to define the properties of an object that is configured with `subobjects: false` with dotted field names
 (as shown in the first example).
 However, it is also possible to define these properties as sub-objects in the mappings.
